--- a/play/play.html
+++ b/play/play.html
@@ -16,6 +16,6 @@
 		</div>
 		<button id="restartBtn" value="Restart">Restart</button>
 	</section>	
-	<script src="script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
